switched to data-src

--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
 		<div class="section" id="mogwaii">
 			<div class="album">
 				<video data-autoplay loop muted playsinline poster="media/covers/mogwai.jpg">
-            <source src="media/covers/mogwai.mp4" type="video/mp4">
+            <source data-src="media/covers/mogwai.mp4" type="video/mp4">
         </video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/2fpcgO6HxWRz4u2dm3ECsH" target="_blank">Mogwai <span class="divider">–</span> <span class="albumName">Rave Tapes</span></a></h2>
 			<audio data-autoplay loop>
-			    <source src="media/covers/mogwai.mp3" type="audio/mp3">
+			    <source data-src="media/covers/mogwai.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -188,12 +188,12 @@
 		<div class="section" id="pupp">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/pup.jpg">
-							<source src="media/covers/pup.mp4" type="video/mp4">
+							<source data-src="media/covers/pup.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/7lelUe4aaCQmOMJKsQvirf" target="_blank">Pup <span class="divider">–</span> <span class="albumName">The Dream is Over</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/pup.mp3" type="audio/mp3">
+					<source data-src="media/covers/pup.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -202,12 +202,12 @@
 		<div class="section" id="thiswilldestroyyouu">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/thiswilldestroyyou.jpg">
-							<source src="media/covers/thiswilldestroyyou.mp4" type="video/mp4">
+							<source data-src="media/covers/thiswilldestroyyou.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/0lNzqMHMvdmRTDmQBLO5kN" target="_blank">This Will Destroy You <span class="divider">–</span> <span class="albumName">Live in Reykjavik</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/thiswilldestroyyou.mp3" type="audio/mp3">
+					<source data-src="media/covers/thiswilldestroyyou.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -216,12 +216,12 @@
 		<div class="section" id="odeszaa">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/odesza.jpg">
-							<source src="media/covers/odesza.mp4" type="video/mp4">
+							<source data-src="media/covers/odesza.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/5SXT6dwhHX56Sos7KMcMF5" target="_blank">Odesza <span class="divider">–</span> <span class="albumName">In Return</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/odesza.mp3" type="audio/mp3">
+					<source data-src="media/covers/odesza.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -231,12 +231,12 @@
 		<div class="section" id="brandneww">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/brandnew.jpg">
-							<source src="media/covers/brandnew.mp4" type="video/mp4">
+							<source data-src="media/covers/brandnew.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/6vDiMhyfSnTn18OY99BSQX" target="_blank">Brand New <span class="divider">–</span> <span class="albumName">Deja Etendu</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/brandnew.mp3" type="audio/mp3">
+					<source data-src="media/covers/brandnew.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -245,11 +245,11 @@
 		<div class="section" id="dannybrownn">
 			<div class="album">
 				<video id="dannyVideo" muted data-autoplay loop playsinline poster="media/covers/dannybrown.jpg">
-						<source src="media/covers/dannybrown.mp4" type="video/mp4">
+						<source data-src="media/covers/dannybrown.mp4" type="video/mp4">
 				</video>
 			</div>
 			<audio data-autoplay loop>
-					<source src="media/covers/dannybrown.mp3" type="audio/mp3">
+					<source data-src="media/covers/dannybrown.mp3" type="audio/mp3">
 			</audio>
 			<h2><a href="https://open.spotify.com/album/5SC0415RIGVX9ZfL0tfbAl" target="_blank">Danny Brown <span class="divider">–</span> <span class="albumName">Old</span></a></h2>
 			<div class="vinyl"></div>
@@ -259,12 +259,12 @@
 		<div class="section" id="pinkfloydd">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/pinkfloyd.jpg">
-							<source src="media/covers/pinkfloyd.mp4" type="video/mp4">
+							<source data-src="media/covers/pinkfloyd.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/0bCAjiUamIFqKJsekOYuRw" target="_blank">Pink Floyd <span class="divider">–</span> <span class="albumName">Wish You Were Here</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/pinkfloyd.mp3" type="audio/mp3">
+					<source data-src="media/covers/pinkfloyd.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -273,12 +273,12 @@
 		<div class="section" id="sunsofthymee">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/sunsofthyme.jpg">
-							<source src="media/covers/sunsofthyme.mp4" type="video/mp4">
+							<source data-src="media/covers/sunsofthyme.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/6yWOQtaSvRvKWzjqeW56eB" target="_blank">Suns of Thyme <span class="divider">–</span> <span class="albumName">Cascades</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/sunsofthyme.mp3" type="audio/mp3">
+					<source data-src="media/covers/sunsofthyme.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
@@ -287,20 +287,20 @@
 		<div class="section" id="radicalfacee">
 			<div class="album">
 				<video class="webm" data-autoplay muted loop playsinline poster="media/covers/radicalface-separated.jpg">
-			        <source src="media/covers/radicalface-separated.mp4" type="video/webm">
+			        <source data-src="media/covers/radicalface-separated.mp4" type="video/webm">
 			  </video>
 				<video class="notwebm" data-autoplay muted loop playsinline poster="media/covers/radicalface.jpg">
-			      <source src="media/covers/radicalface.mp4" type="video/mp4">
+			      <source data-src="media/covers/radicalface.mp4" type="video/mp4">
 			  </video>
 			</div>
 			<div id="radicalfaceBirds" class="webm">
 				<video data-autoplay muted loop playsinline>
-			        <source src="media/covers/birds.webm" type="video/webm">
+			        <source data-src="media/covers/birds.webm" type="video/webm">
 			  </video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/0VYi6aRMwxXpfvNwDCr3bB" target="_blank">Radical Face <span class="divider">–</span> <span class="albumName">Ghost</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/radicalface.mp3" type="audio/mp3">
+					<source data-src="media/covers/radicalface.mp3" type="audio/mp3">
 			</audio>
 
 			<div class="vinyl"></div>
@@ -310,12 +310,12 @@
 		<div class="section" id="vincee">
 			<div class="album">
 				<video data-autoplay muted loop playsinline poster="media/covers/vince.jpg">
-							<source src="media/covers/vince.mp4" type="video/mp4">
+							<source data-src="media/covers/vince.mp4" type="video/mp4">
 					</video>
 			</div>
 			<h2><a href="https://open.spotify.com/album/2haR5qnQopCdVASZ92YTGn" target="_blank">Vince Staples <span class="divider">–</span> <span class="albumName">Prima Donna</span></a></h2>
 			<audio data-autoplay loop>
-					<source src="media/covers/vince.mp3" type="audio/mp3">
+					<source data-src="media/covers/vince.mp3" type="audio/mp3">
 			</audio>
 			<div class="vinyl"></div>
 		</div>
